--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-pagination",
+  "name": "express-next-starter",
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "MIT",
